<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/black"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BacActivity" >

    <!-- Row 1 with single column -->
    <ImageView
        android:id="@+id/bacTitleIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bac_button"
        android:src="@drawable/bac_calculator" />

    <TableRow android:layout_width="match_parent" >

    </TableRow>
	    
	<TableRow>

		<TextView
		    android:id="@+id/ouncesTv"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="103dp"
		    android:text="@string/ounces_lbl"
		    android:textColor="@color/white"
		    android:textSize="32sp" />

		<EditText
		    android:id="@+id/ouncesEt"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:layout_marginLeft="39dp"
		    android:ems="10"
		    android:hint="(ounces)"
		    android:inputType="number"
		    android:textColor="@color/white" />

	</TableRow>

	<TableRow>

	    <TextView
	        android:id="@+id/percentTb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="42dp"
	        android:text="@string/pecent_lbl"
	        android:textColor="@color/white"
	        android:textSize="32sp" />

	    <EditText
	        android:id="@+id/percentEt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:ems="10"
	        android:hint="(Alcohol %)"
	        android:inputType="number"
	        android:textColor="@color/white" />

	</TableRow>

	<TableRow>
	    <TextView
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="33dp"
	        android:text="@string/gender_lbl"
	        android:textColor="@color/white"
	        android:textSize="32sp" />

	    <EditText
	        android:id="@+id/genderEt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:ems="10"
	        android:hint="@string/hint_m_f"
	        android:textColor="@color/white" />

    </TableRow>
    
	<TableRow>
	    <TextView
	        android:id="@+id/weight"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="33dp"
	        android:text="@string/weight_lbl"
	        android:textColor="@color/white"
	        android:textSize="32sp" />

	    <EditText
	        android:id="@+id/weightEt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:ems="10"
	        android:hint="(Pounds)"
	        android:inputType="number"
	        android:textColor="@color/white" />

    </TableRow>
    
	<TableRow
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >

		<TextView
		    android:id="@+id/hours"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="33dp"
		    android:text="@string/hours_lbl"
		    android:textColor="@color/white"
		    android:textSize="32sp" />

	    <EditText
	        android:id="@+id/timeEt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:ems="10"
	        android:hint="(Time in Hours)"
	        android:inputType="numberDecimal"
	        android:textColor="@color/white" />

	</TableRow>

	<TextView
	    android:id="@+id/resultTv"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="125dp"
	    android:textColor="@color/white" />
	<Button
	    android:id="@+id/btnCalc"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="calculateBac"
	    android:text="@string/calculate_button"
	    android:textColor="@color/white" />
	<Button
	    android:id="@+id/btnClear"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="clearForm"
	    android:text="@string/clear_btn"
	    android:textColor="@color/white" />
</TableLayout>