<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >
    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </TabWidget>
    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
	
	<!-- SEARCH TAB -->
        <LinearLayout
            android:id="@+id/search"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="60dp" >

            <TextView
                android:id="@+id/tvSearchTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Welcome to DrinkMate!"
                android:textColor="@color/bluelight"
                android:textSize="42sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSearchSelectDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:paddingTop="10dp"
                android:text="Browse Drinks"
                android:textColor="@color/baseblue"
                android:textSize="32sp"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/spinDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@color/grey"
                android:text="(Select Drink From List)" />
            
            <TextView
                android:id="@+id/tvSearchSelectIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Search By Ingredient"
                android:textColor="@color/baseblue"
                android:textSize="32sp"
                android:textStyle="italic" />
			
            <com.isat.drinkmate.view.MultiSelectionSpinner
                android:id="@+id/mySpinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="20dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/tvNameSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="20dp"
                android:hint="(No Drink Selected)"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tvDescriptionSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:hint="(Description)"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tvIngredientSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:hint="(Ingredients)"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="118dp"
                android:onClick="searchClick"
                android:text="Get Drink"
                android:textColor="@color/white" />

        </LinearLayout>
        
		<!-- RANDOM TAB -->
        <LinearLayout
            android:id="@+id/random"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="60dp" >
			<TextView
                android:id="@+id/tvRandomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Shake/Click for a Drink!"
                android:textColor="@color/baseblue"
                android:textSize="42sp" 
                android:textStyle="bold" />
			<TextView
                android:id="@+id/tvRandomDrinkNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Drink Name"
                android:textColor="@color/baseblue"
                android:textSize="32sp" />
            <TextView
                android:id="@+id/tvDrinkName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tvRandomDrinkDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Description"
                android:textColor="@color/baseblue"
                android:textSize="32sp" />
            <TextView
                android:id="@+id/tvDrinkDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tvRandomDrinkIngredientsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Ingredients"
                android:textColor="@color/baseblue"
                android:textSize="32sp" />
            <TextView
                android:id="@+id/tvDrinkIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"

                android:onClick="generateDrink"
                android:text="@string/generate_lbl"
                android:textColor="@color/white" />
        </LinearLayout>
        
        <!-- BAC TAB -->
        <LinearLayout
            android:id="@+id/BAC"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="60dp" >
     	 <TextView
                android:id="@+id/tvBACTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Calculate BAC"
                android:textColor="@color/baseblue"
                android:textSize="42sp" 
                android:textStyle="bold" />
            <!-- Row 1 with single column -->

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/ouncesTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ounces_lbl"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <EditText
                    android:id="@+id/ouncesEt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:ems="10"
                    android:hint="(ounces)"
                    android:inputType="number"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/percentTb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/pecent_lbl"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <EditText
                    android:id="@+id/percentEt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="65dp"
                    android:ems="10"
                    android:hint="(Alcohol %)"
                    android:inputType="number"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/gender_lbl"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <EditText
                    android:id="@+id/genderEt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="187dp"
                    android:ems="10"
                    android:hint="@string/hint_m_f"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/weight_lbl"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <EditText
                    android:id="@+id/weightEt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="188dp"
                    android:ems="10"
                    android:hint="(Pounds)"
                    android:inputType="number"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/hours_lbl"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <EditText
                    android:id="@+id/timeEt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="75dp"
                    android:hint="(Time in Hours)"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/resultTv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="\n(Please Enter Your Information)\n"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnCalc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="calculateBac"
                    android:text="@string/calculate_button"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clearForm"
                    android:text="@string/clear_btn"
                    android:textColor="@color/white" />
            </TableRow>
        </LinearLayout>
    </FrameLayout>

</TabHost>